--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+[dependencies.bitvec]
+version = "1.0.1"
+default-features = false
+features = ["alloc"]
